// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card Components > Snapshots > matches all sizes snapshot 1`] = `
<div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm transition-colors border-border bg-card text-sm"
  >
    <div
      class="p-6 pt-0"
    >
      Small card
    </div>
  </div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm transition-colors border-border bg-card"
  >
    <div
      class="p-6 pt-0"
    >
      Default card
    </div>
  </div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm transition-colors border-border bg-card text-lg"
  >
    <div
      class="p-6 pt-0"
    >
      Large card
    </div>
  </div>
</div>
`;

exports[`Card Components > Snapshots > matches all variants snapshot 1`] = `
<div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm transition-colors border-border bg-card"
  >
    <div
      class="p-6 pt-0"
    >
      Default variant
    </div>
  </div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm transition-colors border-green-200 bg-green-50 dark:border-green-800 dark:bg-green-950/30"
  >
    <div
      class="p-6 pt-0"
    >
      Success variant
    </div>
  </div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm transition-colors border-yellow-200 bg-yellow-50 dark:border-yellow-800 dark:bg-yellow-950/30"
  >
    <div
      class="p-6 pt-0"
    >
      Warning variant
    </div>
  </div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm transition-colors border-red-200 bg-red-50 dark:border-red-800 dark:bg-red-950/30"
  >
    <div
      class="p-6 pt-0"
    >
      Danger variant
    </div>
  </div>
</div>
`;

exports[`Card Components > Snapshots > matches card components individually snapshot 1`] = `
<div>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    Header Component
  </div>
  <h3
    class="text-2xl font-semibold leading-none tracking-tight"
  >
    Title Component
  </h3>
  <p
    class="text-sm text-muted-foreground"
  >
    Description Component
  </p>
  <div
    class="p-6 pt-0"
  >
    Content Component
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    Footer Component
  </div>
</div>
`;

exports[`Card Components > Snapshots > matches complete card structure snapshot 1`] = `
<div
  class="rounded-lg border text-card-foreground shadow-sm transition-colors border-green-200 bg-green-50 dark:border-green-800 dark:bg-green-950/30 text-lg"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Complete Card
    </h3>
    <p
      class="text-sm text-muted-foreground"
    >
      Full card structure with all components
    </p>
  </div>
  <div
    class="p-6 pt-0"
  >
    <p>
      This card demonstrates all possible card components working together.
    </p>
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    <button>
      Action
    </button>
  </div>
</div>
`;

exports[`Card Components > Snapshots > matches default card snapshot 1`] = `
<div
  class="rounded-lg border text-card-foreground shadow-sm transition-colors border-border bg-card"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Default Card
    </h3>
    <p
      class="text-sm text-muted-foreground"
    >
      This is a default card
    </p>
  </div>
  <div
    class="p-6 pt-0"
  >
    Card content goes here
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    Card footer
  </div>
</div>
`;
